Data Structure mimics that of Jigsaw

--- a/app/static/directives/list-view.html
+++ b/app/static/directives/list-view.html
@@ -28,7 +28,7 @@
 						</button>
 					</div>
 
-					&nbsp;&nbsp;|&nbsp;&nbsp;
+					&nbsp;|&nbsp;&nbsp;
 
 					<div class="btn-group">
 						<button type="button" class="btn btn-default btn-sm js-tooltip js-active-top" data-toggle="tooltip" data-placement="top" title="Bring active elements to the top of the list" ng-click="setFirstOrderSort('-hasStrength')" ng-class="{true:'active', false:''}[firstOrderPredicate=='-hasStrength']">
@@ -36,7 +36,7 @@
 						</button>
 					</div>
 
-					&nbsp;|&nbsp;
+					&nbsp;&nbsp;|&nbsp;
 
 					<!-- <div class="btn-group">
 						<button type="button" class="btn btn-default btn-sm js-tooltip js-clear-selection" data-toggle="tooltip" data-placement="top" title="Clear Selection">
