Scrolling issue fixed

--- a/app/static/directives/list-component.html
+++ b/app/static/directives/list-component.html
@@ -1,4 +1,4 @@
 <div class="js-list col-1-4" ng-controller="ListController">				
-	<my-list-view></my-list-view>
+	<my-list-view index="{{list_index}}"></my-list-view>
 </div>
 <div class="col-space top-margin js-list-scrollbar"></div>
