--- a/app/static/directives/list-view.html
+++ b/app/static/directives/list-view.html
@@ -61,9 +61,27 @@
 			</div>
 		</div>
 	</div>
-	<div class="panel-body" style="height: {{restrictedHeight}}px;">
-		<div class="restrict js-scroll-list" style="height: {{restrictedHeight}}px; float:left;" id="parentContainer">
-			<!-- <div class="small-loader" ng-show="isListLoading"></div> -->
+	<div class="scroll-list-container" style="height: {{restrictedHeight}}px;">
+		<div class="panel-body" style="float: left;">
+			<div class="scroller"  id="parentContainer{{list_index}}" style="height: {{restrictedHeight}}px;">
+				<div class="restrict">
+					<ul class="js-items-list" infinite-scroll='loadMoreData()' infinite-scroll-distance="1" infinite-scroll-container="parent_container_selector" infinite-scroll-parent>
+						<li class="row" ng-repeat="item in listData track by item.name">
+							<div class="col-xs-2 bar-container" bo-attr bo-attr-title="{{item.count}}">
+								<div class="bar" bo-style="{'width': (1-item.frequency) * 145 +'%' };"></div>
+							</div>
+							<span class="col-xs-10 padding-right-25 ellipsize {{align}}" ng-style="{'background-color': item.background};" ng-click="selectItem(item.name)"> {{item.name}}
+								<sup ng-if="item.hasStrength == 1">{{item.strengthCount}}</sup>
+							</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<!-- <div class="small-loader" ng-show="isListLoading"></div> -->
+			
+		<!-- <div class="restrict js-scroll-list" style="height: {{restrictedHeight}}px; float:left;" id="parentContainer">
 			<ul class="js-items-list" infinite-scroll='loadMoreData()' infinite-scroll-distance="1" infinite-scroll-container="'#parentContainer'" infinite-scroll-parent>
 				<li class="row" ng-repeat="item in listData track by item.name">
 					<div class="col-xs-2 bar-container" bo-attr bo-attr-title="{{item.count}}">
@@ -74,9 +92,9 @@
 					</span>
 				</li>
 			</ul>
-		</div>
+		</div> -->
 		<div class="js-scrollbar overview-scrollbar" ng-class="{true:'hidden', false:''}[totalRecords < (restrictedHeight/21)]">
-		 	<!-- ng-attr-height="{{restrictedHeight}}" -->
+			<!-- ng-attr-height="{{restrictedHeight}}" -->
 			<svg width="20">
 				<g transform="translate(0,0)">
 					<rect class="frame" width="20"></rect>
