--- a/app/static/directives/list-view.html
+++ b/app/static/directives/list-view.html
@@ -21,7 +21,7 @@
 							<span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
 						</button>
 						<button type="button" class="btn btn-default btn-sm js-tooltip js-sort-by-connection" data-toggle="tooltip" data-placement="top" title="Sort list by connection strength"  ng-click="orderByPredicate='-strength';" ng-class="{true:'active', false:''}[orderByPredicate=='-strength']">
-							<span class="glyphicon glyphicon-align-justify"></span>
+							<span class="glyphicon glyphicon-align-justify colored"></span>
 						</button>
 					</div>
 
