--- a/app/static/directives/list-view.html
+++ b/app/static/directives/list-view.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
-  <div class="panel-heading">
+  <div class="list-panel-heading panel-heading">
     <div>
-      <div class="row">
+      <div class="row list-row">
         <div class="col-xs-9 js-tooltip" data-toggle="tooltip" data-placement="bottom" title="Select item type to be shown in the list"  style="padding-right: 5px; padding-left: 20px;">
           <select class="form-control" ng-model="selectedList" ng-change="listChanged()">
             <option bindonce ng-repeat="header in headers">{{header}}</option>
@@ -11,17 +11,17 @@
           <button type="button" class="btn btn-default" ng-click="clearSelections()">Clear</button>
         </div>
       </div>
-      <div class="row top-margin-10">
+      <div class="row list-row top-margin-10">
         <div class="col-xs-12" style="padding-left: 20px;">
           <div class="btn-group">
             <button type="button" class="btn btn-default btn-sm js-tooltip js-sort-alphabetically" data-toggle="tooltip" data-placement="top" title="Sort list alphabetically" ng-click="orderByPredicate='name';" ng-class="{true:'active', false:''}[orderByPredicate=='name']">
-              <span class="glyphicon glyphicon-sort-by-alphabet"></span>
+              <span class="glyphicon list-glyphicon glyphicon-sort-by-alphabet"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm js-tooltip js-sort-by-frequency" data-toggle="tooltip" data-placement="top" title="Sort list by frequency" ng-click="orderByPredicate='-frequency';" ng-class="{true:'active', false:''}[orderByPredicate=='-frequency']">
-              <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
+              <span class="glyphicon list-glyphicon glyphicon-sort-by-attributes-alt"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm js-tooltip js-sort-by-connection" data-toggle="tooltip" data-placement="top" title="Sort list by connection strength"  ng-click="orderByPredicate='-strength';" ng-class="{true:'active', false:''}[orderByPredicate=='-strength']">
-              <span class="glyphicon glyphicon-align-justify colored"></span>
+              <span class="glyphicon list-glyphicon glyphicon-align-justify colored"></span>
             </button>
           </div>
 
@@ -29,7 +29,7 @@
 
           <div class="btn-group">
             <button type="button" class="btn btn-default btn-sm js-tooltip js-active-top" data-toggle="tooltip" data-placement="top" title="Bring active elements to the top of the list" ng-click="setFirstOrderSort('-hasStrength')" ng-class="{true:'active', false:''}[firstOrderPredicate=='-hasStrength']">
-              <span class="glyphicon glyphicon-arrow-up"></span>
+              <span class="glyphicon list-glyphicon glyphicon-arrow-up"></span>
             </button>
           </div>
 
@@ -37,7 +37,7 @@
 
           <!-- <div class="btn-group">
             <button type="button" class="btn btn-default btn-sm js-tooltip js-clear-selection" data-toggle="tooltip" data-placement="top" title="Clear Selection">
-              <span class="glyphicon glyphicon-remove"></span>
+              <span class="glyphicon list-glyphicon glyphicon-remove"></span>
             </button>
           </div>
 
@@ -45,13 +45,13 @@
 
           <div class="btn-group">
             <button type="button" class="btn btn-default btn-sm js-tooltip js-align-left" data-toggle="tooltip" data-placement="top" title="Align Left" ng-click="setAlignment('text-left')" ng-class="{true:'active', false:''}[align=='text-left']">
-              <span class="glyphicon glyphicon-align-left"></span>
+              <span class="glyphicon list-glyphicon glyphicon-align-left"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm js-tooltip js-align-center" data-toggle="tooltip" data-placement="top" title="Center" ng-click="setAlignment('text-center')" ng-class="{true:'active', false:''}[align=='text-center']">
-              <span class="glyphicon glyphicon-align-center"></span>
+              <span class="glyphicon list-glyphicon glyphicon-align-center"></span>
             </button>
             <button type="button" class="btn btn-default btn-sm js-tooltip js-align-right" data-toggle="tooltip" data-placement="top" title="Align Right" ng-click="setAlignment('text-right')" ng-class="{true:'active', false:''}[align=='text-right']">
-              <span class="glyphicon glyphicon-align-right"></span>
+              <span class="glyphicon list-glyphicon glyphicon-align-right"></span>
             </button>
           </div>
         </div>
@@ -59,11 +59,11 @@
     </div>
   </div>
   <div class="scroll-list-container" style="height: {{restrictedHeight}}px;">
-    <div class="panel-body">
-      <div class="scroller"  id="parentContainer{{list_index}}" style="height: {{restrictedHeight}}px;">
-        <div class="js-items-list viewport real restrict" style="overflow-x: hidden; overflow-y: auto; max-height: {{restrictedHeight}}px;">
+    <div class="panel-body list-panel-body">
+      <div class="list-scroller"  id="parentContainer{{list_index}}" style="height: {{restrictedHeight}}px;">
+        <div class="js-items-list viewport real list-restrict" style="overflow-x: hidden; overflow-y: auto; max-height: {{restrictedHeight}}px;">
           <ul>
-            <li class="row" sf-virtual-repeat="item in listData">
+            <li class="row list-row" sf-virtual-repeat="item in listData">
               <div class="col-xs-2 bar-container" title="{{item.count}}">
                 <div class="bar" ng-style="{'width': (1-item.frequency) * 145 +'%' };"></div>
               </div>
