Event broadcasting setup

--- a/app/static/directives/grid-component.html
+++ b/app/static/directives/grid-component.html
@@ -41,7 +41,7 @@
 									<label>{{cur_doc}}</label>
 								</div>
 								<div class="col-sm-6 text-center">
-									<button type="button" class="btn btn-primary btn-sm" ng-disabled="compute_btn_disabled" ng-click="loadSimmilarityScore()">Compute Document Simmilarity</button>
+									<button type="button" class="btn btn-primary btn-sm" ng-disabled="compute_btn_disabled" ng-click="loadSimmilarityScore()">Compute Document Similarity</button>
 								</div>
 							</div>
 						</div>
