--- a/app/static/directives/list-view.html
+++ b/app/static/directives/list-view.html
@@ -61,15 +61,18 @@
   <div class="scroll-list-container" style="height: {{restrictedHeight}}px;">
     <div class="panel-body list-panel-body">
       <div class="list-scroller"  id="parentContainer{{list_index}}" style="height: {{restrictedHeight}}px;">
-        <div class="js-items-list viewport real list-restrict" style="overflow-x: hidden; overflow-y: auto; max-height: {{restrictedHeight}}px;">
+        <div class="js-items-list viewport real list-restrict" style="overflow-x: hidden; overflow-y: auto; max-height: {{restrictedHeight}}px;" ng-class="{true: 'list-restrict-full', false:'list-restrict'}[totalRecords < (restrictedHeight/21)]">
           <ul>
             <li class="row list-row" sf-virtual-repeat="item in listData">
               <div class="col-xs-2 bar-container" title="{{item.count}}">
                 <div class="bar" ng-style="{'width': (1-item.frequency) * 160 +'%' };"></div>
               </div>
-              <span class="col-xs-10 padding-right-25 ellipsize {{align}}" ng-style="{'background-color': item.background};" ng-click="selectItem(item.name)"> {{item.name}}
+              <span class="col-xs-10 padding-right-25 ellipsize {{align}}" ng-style="{'background-color': item.background};" ng-click="selectItem(item.name, $event, $index);"> {{item.name}}
                 <sup ng-if="item.hasStrength == 1">{{item.strengthCount}}</sup>
               </span>
+              <!-- <div class="col-xs-2 multiselect" ng-click="item.checked=!item.checked; selectMultipleItems(item.name);">
+                <input type="checkbox" value="{{item.name}}" ng-model="item.checked" ng-click="selectMultipleItems(item.name); $event.stopPropagation();"/>
+              </div> -->
             </li>
           </ul>
         </div>
